2008-01-09  Masami Hiramatsu  <mhiramat@redhat.com>

	PR5544
	* lib/stap_run.exp (stap_run): Support warning before ending probe.

2008-01-07  William Cohen  <wcohen@redhat.com>
	* lib/systemtap.exp (as_root): new proc.
	* systemtap.context/context.exp:
	* systemtap.printf/end1b.exp: 
	* systemtap.printf/mixed_outb.exp:
	* systemtap.printf/out1b.exp:
	* systemtap.printf/out2b.exp:
	* systemtap.printf/out3b.exp: Use as_root proc.

2008-01-04  David Smith  <dsmith@redhat.com>

	* systemtap.base/marker.exp: Improved regexp that finds markers
	with arguments.

2007-12-12  Martin Hunt  <hunt@redhat.com>
	Detect crashing stap and report as a test failure.
	* lib/systemtap.exp (stap_run_batch): Return -1 if stap
	crashed.
	* systemtap.pass1-4/buildko.exp: If stap_run_batch returned
	-1 then mark test as failed.
	* systemtap.pass1-4/parseko.exp: Ditto.
	* systemtap.pass1-4/semko.exp: Ditto.
	* systemtap.pass1-4/transko.exp: Ditto.

2007-12-05  Masami Hiramatsu  <mhiramat@redhat.com>

	PR 4935
	* parseok/five.stp: Add an example of conditional probe point.
	* parseko/probepoint04.stp: New test for conditional probe point.
	* parseko/probepoint05.stp: Ditto.
	* parseko/probepoint06.stp: Ditto.
	* parseko/probepoint07.stp: Ditto.
	* parseko/probepoint08.stp: Ditto.
	* parseko/probepoint09.stp: Ditto.
	* semok/twentynine.stp: Ditto.
	* semko/thirtynine.stp: Ditto.
	* systemtap.base/onoffprobe.*: Ditto.

2007-12-03  Masami Hiramatsu  <mhiramat@redhat.com>

	PR 5376
	* perseko/twentytwo.stp: Change testcase to the wildcarded probe
	points with spaces.

2007-11-29  David Smith  <dsmith@redhat.com>

	* systemtap.base/marker.exp: Gets marker list from
	Module.markers.  K_MARKER03 is always run since it is designed to
	fail.

2007-11-27  David Smith  <dsmith@redhat.com>

	* semok/twentyeight.stp: Tests wildcarded probe points.

2007-11-19  Frank Ch. Eigler  <fche@elastic.org>

	* parseok/five.stp, semok/twentyseven.stp: Test "!" probe point flag.
